--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
 	<link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
 	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
   	
-	<title>Product Builder | CodyHouse</title>
+	<title>Product Builder | Binder</title>
 </head>
 <body>
 <div class="cd-product-builder">
 	<header class="main-header">
-		<h1>Product Builder</h1>
+		<h1>Arma tu cuaderno</h1>
 		
 		<nav class="cd-builder-main-nav disabled">
 			<ul>
-				<li class="active"><a href="#models">Models</a></li>
-				<li><a href="#colors">Colors</a></li>
-				<li><a href="#accessories">Accessories</a></li>
+				<li class="active"><a href="#models">Tamaño</a></li>
+				<li><a href="#colors">Tapa y contratapa</a></li>
+				<li><a href="#accessories">Hojas</a></li>
 				<li><a href="#summary">Summary</a></li>
 			</ul>
 		</nav>
@@ -39,14 +39,14 @@
 
 					<ul class="models-list options-list cd-col-2">
 						<li class="js-option js-radio" data-price="42400" data-model="product-01">
-							<span class="name">BMW i3</span>
+							<span class="name">A3</span>
 							<img src="img/product01_col01.jpg" alt="BMW i3">
 							<span class="price">from $42.400</span>
 							<div class="radio"></div>
 						</li>
 
 						<li class="js-option js-radio" data-price="140700" data-model="product-02">
-							<span class="name">BMW i8</span>
+							<span class="name">A5</span>
 							<img src="img/product02_col01.jpg" alt="BMW i8">
 							<span class="price">from $140.700</span>
 							<div class="radio"></div>
